# FastPointViewer

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
res/models/: Download Lucy PLY.url  Stanford 3D Scanning Repository.url  build_tree.py  build_tree_test.py  ooc_point_sorting.py  ooc_point_sorting_test.py
res/shaders/: 4.3.shader.fs  4.3.shader.vs
src/: Camera.h  FPVConfig.h.in  Loader.h  Main.cpp  Plane.h  Shader.h
